--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #gameboard {
     width: 500px;
     height: 500px;
@@ -15,3 +23,8 @@
     box-sizing: border-box;
 }
 
+.circle {
+    width: 150px;
+    height: 150px;
+    color: black;
+}
