--- a/style.css
+++ b/style.css
@@ -23,10 +23,16 @@ body {
     background-color: white;
     border: solid 2px black;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
 .circle {
-    width: 50px;
-    height: 50px;
-    color: black;
+    display: flex;
+    width: 90px;
+    height: 90px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    border: 15px solid blue;
 }
