--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
-    align-self: center;
+    align-items: center;
 }
 
 .circle {
@@ -47,4 +47,18 @@ body {
     content: '';
     position: absolute;
     background-color: red;
+}
+
+.cross:before {
+    left: 50%;
+    width: 30%;
+    margin-left: -15%;
+    height: 100%;
+}
+
+.cross::after {
+    top: 50%;
+    height: 30%;
+    margin-top: -15%;
+    width: 100%;
 }
